# graphql-jit

./: pyproject.toml
benchmark/: test.py
graphql_jit/: backend.py  compiler.py  document.py  generate.py  type.py  utils.py
graphql_jit/templates/: header.tpl  query.tpl  resolve_leaf.tpl  resolve_list.tpl  resolve_non_null.tpl  resolve_object.tpl
